[project]
name = "lalonde-baysian-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.23.0",
    "fastprogress>=1.1.3",
    "ipywidgets>=8.1.8",
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "numpyro>=0.19.0",
    "nutpie>=0.16.4",
    "pandas>=2.3.3",
    "pymc>=5.26.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
